--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-select": "^2.0.0",
@@ -22,10 +22,13 @@
     "@radix-ui/react-toast": "^1.2.7",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/uuid": "^10.0.0",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
-    "framer-motion": "^11.0.6",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
@@ -34,7 +37,9 @@
     "react-hook-form": "^7.50.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "uuid": "^11.1.0",
+    "zod": "^3.22.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
