--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -29,14 +32,18 @@
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.2",
-    "lucide-react": "^0.338.0",
+    "lucide-react": "^0.488.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.55.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.5.2",
     "uuid": "^11.1.0",
     "zod": "^3.22.4",
     "zustand": "^5.0.3"
