--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.2.4",
-    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-toast": "^1.2.7",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -35,13 +36,16 @@
     "lucide-react": "^0.488.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.10.1",
     "react": "^18.2.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.5.2",
     "uuid": "^11.1.0",
@@ -50,8 +54,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
