--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.2.4",
+    "@radix-ui/react-scroll-area": "^1.2.5",
     "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-toast": "^1.2.7",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
@@ -37,12 +40,14 @@
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.10.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
+    "react-share": "^5.2.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar-hide": "^2.0.0",
@@ -54,6 +59,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "autoprefixer": "^10.4.17",
