--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.488.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
