--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,14 @@ next-env.d.ts
 
 # Supabase
 .supabase/
+supabase/.branches/
+supabase/.temp/
+supabase/.env
+supabase/config.toml
+**/supabase/seed.sql
+**/supabase/sandbox
+**/supabase/.config
+**/supabase/.vercel
 
 # Logs
 logs/
