--- a/.gitignore
+++ b/.gitignore
@@ -46,14 +46,7 @@ next-env.d.ts
 
 # Supabase
 .supabase/
-supabase/.branches/
-supabase/.temp/
-supabase/.env
-supabase/config.toml
-**/supabase/seed.sql
-**/supabase/sandbox
-**/supabase/.config
-**/supabase/.vercel
+supabase/
 supabase_policies.sql
 fix_admin_direct.sql
 
