Fix: Ajout du fichier de types messages.types.ts pour Vercel

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ fix_admin_direct.sql
 !src/lib/supabase/wallets.ts
 !src/lib/supabase/transactions.ts
 !src/types/supabase/notifications.types.ts
+!src/types/supabase/messages.types.ts
 
 # Logs
 logs/
