Fix: Désactivation temporaire de dependency-review-action qui pose problème

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -34,11 +34,12 @@ jobs:
       - name: Run npm audit
         run: npm audit --production --audit-level=high || true
 
-      - name: Setup dependency scanning
-        uses: github/dependency-review-action@v3.1.4
-        if: github.event_name == 'pull_request'
-        with:
-          fail-on-severity: high
+      # Temporarily disabled due to GitHub Actions issues
+      # - name: Setup dependency scanning
+      #   uses: github/dependency-review-action@v3.1.4
+      #   if: github.event_name == 'pull_request'
+      #   with:
+      #     fail-on-severity: high
 
   static-analysis:
     name: Static Code Analysis
