Mise à jour du projet - Correction des types TypeScript et préparation pour le déploiement

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,92 @@
-# Supabase
-NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
-# Base URL
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+# Database Configuration
+DATABASE_URL=postgresql://postgres:password@localhost:5432/vynal_platform
 
-# Éventuellement pour le paiement (Stripe)
-# NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
-# STRIPE_SECRET_KEY=your-stripe-secret-key
-# STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret 
+# Authentication
+AUTH_SECRET=your-auth-secret
+AUTH_URL=http://localhost:3000/auth
+AUTH_COOKIE_NAME=vynal-auth
+AUTH_COOKIE_SECURE=false
+AUTH_COOKIE_SAME_SITE=lax
+
+# Encryption & Security
+ENCRYPTION_KEY=your-32-character-encryption-key
+ENCRYPTION_IV=your-16-character-iv
+CSRF_TOKEN_SECRET=your-csrf-token-secret
+JWT_SECRET=your-jwt-secret
+SESSION_SECRET=your-session-secret
+
+# Payment Gateways
+STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key
+STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key
+STRIPE_WEBHOOK_SECRET=whsec_your-stripe-webhook-secret
+
+PAYPAL_CLIENT_ID=your-paypal-client-id
+PAYPAL_CLIENT_SECRET=your-paypal-client-secret
+PAYPAL_MODE=sandbox # or 'live' for production
+
+# Mobile Money Services
+ORANGE_MONEY_API_KEY=your-orange-money-api-key
+ORANGE_MONEY_MERCHANT_KEY=your-orange-money-merchant-key
+ORANGE_MONEY_API_URL=https://api.orange-money.com/v1
+
+WAVE_API_KEY=your-wave-api-key
+WAVE_API_URL=https://api.wave.com/v1
+
+FREE_MONEY_API_KEY=your-free-money-api-key
+FREE_MONEY_API_URL=https://api.free-money.com/v1
+
+# Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-specific-password
+SMTP_FROM=noreply@vynal.com
+SMTP_SECURE=true
+
+# Security Headers
+CSP_DEFAULT_SRC="'self'"
+CSP_SCRIPT_SRC="'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://www.paypal.com"
+CSP_STYLE_SRC="'self' 'unsafe-inline'"
+CSP_IMG_SRC="'self' data: blob: https://*.stripe.com https://*.paypal.com"
+CSP_FONT_SRC="'self'"
+CSP_CONNECT_SRC="'self' https://api.stripe.com https://api.paypal.com https://api.orange-money.com https://api.wave.com https://api.free-money.com"
+CSP_FRAME_SRC="'self' https://js.stripe.com https://www.paypal.com"
+CSP_MEDIA_SRC="'self'"
+CSP_OBJECT_SRC="'none'"
+CSP_BASE_URI="'self'"
+CSP_FORM_ACTION="'self'"
+CSP_FRAME_ANCESTORS="'none'"
+CSP_UPGRADE_INSECURE_REQUESTS="true"
+
+# Application Settings
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_NAME=Vynal Platform
+NEXT_PUBLIC_APP_DESCRIPTION=Platforme de services freelance
+NEXT_PUBLIC_APP_VERSION=1.0.0
+
+# Feature Flags
+ENABLE_STRIPE_PAYMENTS=true
+ENABLE_PAYPAL_PAYMENTS=true
+ENABLE_MOBILE_MONEY_PAYMENTS=true
+ENABLE_EMAIL_NOTIFICATIONS=true
+ENABLE_SMS_NOTIFICATIONS=false
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000 # 15 minutes
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Logging
+LOG_LEVEL=debug
+ENABLE_REQUEST_LOGGING=true
+ENABLE_ERROR_LOGGING=true
+ENABLE_SECURITY_LOGGING=true
+
+# Monitoring
+ENABLE_PERFORMANCE_MONITORING=true
+ENABLE_ERROR_MONITORING=true
+ENABLE_SECURITY_MONITORING=true
