feat: suppression des données de test et implémentation des données réelles, amélioration du système de messagerie et ajout des fonctionnalités du tableau de bord client

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ fix_admin_direct.sql
 !src/lib/supabase/transactions.ts
 !src/types/supabase/notifications.types.ts
 !src/types/supabase/messages.types.ts
+migrations/
 
 # Logs
 logs/
