--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-virtual": "^3.13.6",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
