--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
+    "@upstash/redis": "^1.34.9",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
