--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "find:deadcode": "npx ts-prune",
     "security:audit": "npm audit --production --audit-level=high",
     "prepare": "if test -f .git/hooks/pre-commit; then rm .git/hooks/pre-commit; fi; npx husky install",
-    "test:email": "node src/scripts/test-email.js"
+    "test:email": "node src/scripts/test-email.js",
+    "db:migrate:messaging": "npx supabase db push --db-url $NEXT_PUBLIC_SUPABASE_URL --auth-token $SUPABASE_SERVICE_ROLE_KEY --migration-file ./migrations/add_increment_unread_count.sql",
+    "db:migrate:permissions": "npx supabase db push --db-url $NEXT_PUBLIC_SUPABASE_URL --auth-token $SUPABASE_SERVICE_ROLE_KEY --migration-file ./migrations/fix_conversation_permissions.sql"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
