--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-toast": "^1.2.7",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tabler/icons-react": "^3.31.0",
@@ -54,6 +56,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compromise": "^14.14.4",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
@@ -67,6 +70,7 @@
     "next-intl": "^4.1.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.10.1",
+    "pdfkit": "^0.17.1",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-day-picker": "^9.6.7",
@@ -80,6 +84,7 @@
     "react-share": "^5.2.2",
     "react-virtuoso": "^4.12.6",
     "sonner": "^2.0.3",
+    "stripe": "^18.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
@@ -91,6 +96,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@types/node": "^20.11.19",
+    "@types/pdfkit": "^0.13.9",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
