--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.2",
+    "handlebars": "^4.7.8",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jszip": "^3.10.1",
