--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "db:migrate:messaging": "npx supabase db push --db-url $NEXT_PUBLIC_SUPABASE_URL --auth-token $SUPABASE_SERVICE_ROLE_KEY --migration-file ./migrations/add_increment_unread_count.sql",
     "db:migrate:permissions": "npx supabase db push --db-url $NEXT_PUBLIC_SUPABASE_URL --auth-token $SUPABASE_SERVICE_ROLE_KEY --migration-file ./migrations/fix_conversation_permissions.sql",
     "validate:services": "node scripts/validate-services.js",
-    "prebuild": "npm run validate:services"
+    "update-version": "node scripts/update-version.js",
+    "prebuild": "npm run validate:services && npm run update-version"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
