--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-share": "^5.2.2",
     "react-virtuoso": "^4.12.6",
+    "sanitize-html": "^2.17.0",
     "sonner": "^2.0.3",
     "stripe": "^18.1.0",
     "tailwind-merge": "^2.6.0",
@@ -105,6 +106,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
+    "@types/sanitize-html": "^2.16.0",
     "autoprefixer": "^10.4.17",
     "dotenv": "^16.5.0",
     "eslint": "^8.57.1",
