--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.0",
-    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-virtual": "^3.13.6",
@@ -87,7 +88,10 @@
     "react-image-crop": "^11.0.10",
     "react-intersection-observer": "^9.16.0",
     "react-share": "^5.2.2",
+    "react-virtualized-auto-sizer": "^1.0.26",
     "react-virtuoso": "^4.12.6",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
     "sanitize-html": "^2.17.0",
     "sonner": "^2.0.3",
     "stripe": "^18.1.0",
@@ -107,6 +111,9 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "@types/react-window": "^1.8.8",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "@types/sanitize-html": "^2.16.0",
     "autoprefixer": "^10.4.17",
     "dotenv": "^16.5.0",
