Mise à jour des fichiers globaux et du layout

--- a/public/favicon/manifest.json
+++ b/public/favicon/manifest.json
@@ -39,7 +39,7 @@
    "density": "4.0"
   }
  ],
- "theme_color": "#6554AF",
+ "theme_color": "#FF66B2",
  "background_color": "#ffffff",
  "display": "standalone",
  "orientation": "portrait",
