--- a/package.json
+++ b/package.json
@@ -129,7 +129,8 @@
     "lint-staged": "^15.0.2",
     "postcss": "^8.4.35",
     "postcss-import": "^16.1.0",
-    "rimraf": "^5.0.5",
+    "prettier": "^3.5.3",
+    "rimraf": "^5.0.10",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "ts-prune": "^0.10.3",
