Amélioration de l'interface de paiement

--- a/.env.example
+++ b/.env.example
@@ -1,61 +1,112 @@
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+SUPABASE_JWT_SECRET=your-supabase-jwt-secret
 
-# Database Configuration
-DATABASE_URL=postgresql://postgres:password@localhost:5432/vynal_platform
+# metadataBase
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_SITE_URL_PRODUCTION=https://vynalplatform.com
 
-# Authentication
-AUTH_SECRET=your-auth-secret
-AUTH_URL=http://localhost:3000/auth
-AUTH_COOKIE_NAME=vynal-auth
-AUTH_COOKIE_SECURE=false
-AUTH_COOKIE_SAME_SITE=lax
+# Base URL
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_PRODUCTION_URL=https://vynalplatform.com
 
-# Encryption & Security
-ENCRYPTION_KEY=your-32-character-encryption-key
-ENCRYPTION_IV=your-16-character-iv
-CSRF_TOKEN_SECRET=your-csrf-token-secret
-JWT_SECRET=your-jwt-secret
-SESSION_SECRET=your-session-secret
+# GitHub OAuth
+NEXT_PUBLIC_GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
+NEXT_PUBLIC_GITHUB_REDIRECT_URL=your-github-redirect-url
 
-# Payment Gateways
-STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key
-STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key
-STRIPE_WEBHOOK_SECRET=whsec_your-stripe-webhook-secret
+# Email Configuration
+EMAIL_FROM_ADDRESS=support@example.com
+EMAIL_FROM_NAME=Vynal Platform
+EMAIL_SMTP_HOST=smtp.example.com
+EMAIL_SMTP_PORT=587
+EMAIL_SMTP_USER=smtp-user
+EMAIL_SMTP_PASSWORD=smtp-password
+EMAIL_DEBUG=true
+EMAIL_RATE_LIMIT_SECONDS=60
 
-PAYPAL_CLIENT_ID=your-paypal-client-id
-PAYPAL_CLIENT_SECRET=your-paypal-client-secret
-PAYPAL_MODE=sandbox # or 'live' for production
+# Admin email for contact form notifications
+ADMIN_EMAIL=admin@example.com
+
+# Twilio
+TWILIO_ACCOUNT_SID=your-twilio-account-sid
+TWILIO_AUTH_TOKEN=your-twilio-auth-token
+TWILIO_SERVICE_SID=your-twilio-service-sid
+
+# Payment Gateways - Development Environment
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
+STRIPE_SECRET_KEY=your-stripe-secret-key
+STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
+STRIPE_MODE=development
+
+# Restricted keys for specific features
+STRIPE_RESTRICTED_KEY_PAYMENTS=your-stripe-restricted-key-payments
+STRIPE_RESTRICTED_KEY_CHECKOUT=your-stripe-restricted-key-checkout
+STRIPE_RESTRICTED_KEY_CUSTOMERS=your-stripe-restricted-key-customers
+
+# PayPal - Development Environment
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=your-paypal-client-id
+PAYPAL_SECRET=your-paypal-secret
+PAYPAL_API_BASE=https://api-m.sandbox.paypal.com
+NEXT_PUBLIC_PAYPAL_ENV=sandbox
+
+# PayPal Webhook Configuration
+PAYPAL_WEBHOOK_ID=your-paypal-webhook-id
+PAYPAL_WEBHOOK_URL=https://your-domain.com/api/paypal/webhook
+
+# URLs for payment redirections
+NEXT_PUBLIC_PAYPAL_SUCCESS_URL=http://localhost:3000/payment/success
+NEXT_PUBLIC_PAYPAL_CANCEL_URL=http://localhost:3000/payment/cancel
 
 # Mobile Money Services
 ORANGE_MONEY_API_KEY=your-orange-money-api-key
-ORANGE_MONEY_MERCHANT_KEY=your-orange-money-merchant-key
-ORANGE_MONEY_API_URL=https://api.orange-money.com/v1
-
 WAVE_API_KEY=your-wave-api-key
-WAVE_API_URL=https://api.wave.com/v1
-
 FREE_MONEY_API_KEY=your-free-money-api-key
-FREE_MONEY_API_URL=https://api.free-money.com/v1
 
-# Email Configuration
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASSWORD=your-app-specific-password
-SMTP_FROM=noreply@vynal.com
-SMTP_SECURE=true
+# Encryption and Security Keys
+# ⚠️ IMPORTANT: Never expose these keys on the client side (no NEXT_PUBLIC_)! ⚠️
+ENCRYPTION_KEY=your-encryption-key
+ENCRYPTION_IV=your-encryption-iv
+CSRF_TOKEN_SECRET=your-csrf-token-secret
+JWT_SECRET=your-jwt-secret
+SESSION_SECRET=your-session-secret
+AUTH_SECRET=your-auth-secret
+
+# This key should be moved to server-side only as soon as possible
+# It should NOT be exposed on the client side
+NEXT_PUBLIC_HMAC_SECRET_KEY=your-hmac-secret-key
+
+# CSRF token expiration time (in milliseconds, default: 1 hour)
+CSRF_TOKEN_EXPIRY=3600000
+
+# Encryption mode
+ENCRYPTION_ALGORITHM=aes-256-gcm
+
+# Password hashing parameters
+PASSWORD_HASH_ITERATIONS=100000
+PASSWORD_HASH_KEYLEN=64
+PASSWORD_HASH_DIGEST=sha512
+
+# Client-exposed variables (secure)
+NEXT_PUBLIC_API_URL=https://api.example.com
+NEXT_PUBLIC_ENVIRONMENT=development
+
+# Cache parameters (in milliseconds)
+CACHE_TTL_SHORT=60000
+CACHE_TTL_MEDIUM=300000
+CACHE_TTL_LONG=900000
+CACHE_TTL_DAY=86400000
 
 # Security Headers
 CSP_DEFAULT_SRC="'self'"
-CSP_SCRIPT_SRC="'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://www.paypal.com"
+CSP_SCRIPT_SRC="'self' 'unsafe-inline' 'unsafe-eval'"
 CSP_STYLE_SRC="'self' 'unsafe-inline'"
-CSP_IMG_SRC="'self' data: blob: https://*.stripe.com https://*.paypal.com"
+CSP_IMG_SRC="'self' data: blob:"
 CSP_FONT_SRC="'self'"
-CSP_CONNECT_SRC="'self' https://api.stripe.com https://api.paypal.com https://api.orange-money.com https://api.wave.com https://api.free-money.com"
-CSP_FRAME_SRC="'self' https://js.stripe.com https://www.paypal.com"
+CSP_CONNECT_SRC="'self'"
+CSP_FRAME_SRC="'self'"
 CSP_MEDIA_SRC="'self'"
 CSP_OBJECT_SRC="'none'"
 CSP_BASE_URI="'self'"
@@ -63,16 +114,10 @@ CSP_FORM_ACTION="'self'"
 CSP_FRAME_ANCESTORS="'none'"
 CSP_UPGRADE_INSECURE_REQUESTS="true"
 
-# Application Settings
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_APP_NAME=Vynal Platform
-NEXT_PUBLIC_APP_DESCRIPTION=Platforme de services freelance
-NEXT_PUBLIC_APP_VERSION=1.0.0
-
 # Feature Flags
 ENABLE_STRIPE_PAYMENTS=true
 ENABLE_PAYPAL_PAYMENTS=true
-ENABLE_MOBILE_MONEY_PAYMENTS=true
+ENABLE_MOBILE_MONEY_PAYMENTS=false
 ENABLE_EMAIL_NOTIFICATIONS=true
 ENABLE_SMS_NOTIFICATIONS=false
 
