--- a/public/favicon/manifest.json
+++ b/public/favicon/manifest.json
@@ -9,16 +9,6 @@
    "density": "0.75"
   },
   {
-   "src": "/favicon/favicon-16x16.png",
-   "sizes": "16x16",
-   "type": "image/png"
-  },
-  {
-   "src": "/favicon/favicon-32x32.png",
-   "sizes": "32x32",
-   "type": "image/png"
-  },
-  {
    "src": "/favicon/android-icon-48x48.png",
    "sizes": "48x48",
    "type": "image/png",
@@ -47,15 +37,9 @@
    "sizes": "192x192",
    "type": "image/png",
    "density": "4.0"
-  },
-  {
-   "src": "/favicon/android-icon-512x512.png",
-   "sizes": "512x512",
-   "type": "image/png",
-   "density": "5.0"
   }
  ],
- "theme_color": "#6554AF",
+ "theme_color": "#FF66B2",
  "background_color": "#ffffff",
  "display": "standalone",
  "orientation": "portrait",
