--- a/public/favicon/manifest.json
+++ b/public/favicon/manifest.json
@@ -3,6 +3,31 @@
  "short_name": "Vynal",
  "icons": [
   {
+   "src": "/favicon-16x16.ico",
+   "sizes": "16x16",
+   "type": "image/x-icon"
+  },
+  {
+   "src": "/favicon-32x32.ico",
+   "sizes": "32x32",
+   "type": "image/x-icon"
+  },
+  {
+   "src": "/favicon-48x48.ico",
+   "sizes": "48x48",
+   "type": "image/x-icon"
+  },
+  {
+   "src": "/favicon-64x64.ico",
+   "sizes": "64x64",
+   "type": "image/x-icon"
+  },
+  {
+   "src": "/favicon-128x128.ico",
+   "sizes": "128x128",
+   "type": "image/x-icon"
+  },
+  {
    "src": "/favicon/android-icon-36x36.png",
    "sizes": "36x36",
    "type": "image/png",
@@ -13,6 +38,12 @@
    "sizes": "48x48",
    "type": "image/png",
    "density": "1.0"
+  },
+  {
+   "src": "/favicon/android-icon-68x68.png",
+   "sizes": "68x68",
+   "type": "image/png",
+   "density": "1.42"
   },
   {
    "src": "/favicon/android-icon-72x72.png",
@@ -27,6 +58,12 @@
    "density": "2.0"
   },
   {
+   "src": "/favicon/android-icon-128x128.png",
+   "sizes": "128x128",
+   "type": "image/png",
+   "density": "2.67"
+  },
+  {
    "src": "/favicon/android-icon-144x144.png",
    "sizes": "144x144",
    "type": "image/png",
@@ -37,6 +74,12 @@
    "sizes": "192x192",
    "type": "image/png",
    "density": "4.0"
+  },
+  {
+   "src": "/favicon/android-icon-512x512.png",
+   "sizes": "512x512",
+   "type": "image/png",
+   "density": "10.67"
   }
  ],
  "theme_color": "#FF66B2",
