--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 SUPABASE_JWT_SECRET=your-supabase-jwt-secret
-
+NEXT_PUBLIC_GOOGLE_VERIFICATION=votre-clé
 # metadataBase
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_SITE_URL_PRODUCTION=https://vynalplatform.com
